[package]
name = "lhava_take_home"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.1", features = ["provider-anvil-node"] }
alloy-primitives = "0.8.22"
alloy-sol-types = "0.8.22"
anyhow = "1.0.97"
async-trait = "0.1.87"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.26"
num-traits = "0.2.19"
structopt = "0.3.26"
tokio = { version = "1.43.0", features = ["full"] }
uniswap-sdk-core = "3.6.0"
uniswap-v3-sdk = { version = "3.6.1", features = ["extensions"] }
